# chanjing-sdk

./: LICENSE  README.md  pyproject.toml
examples/: lip_sync_example.py  voice_clone_example.py
src/chanjing/: __init__.py  api.py  auth.py  cache.py  client.py  utils.py
src/chanjing/services/: lip_sync.py  tts.py  voice_clone.py
