[project]
name = "chanjingsdk"
description = "蝉镜 AI Python SDK - 对口型、声音克隆、语音合成"
version = "1.0.0"
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["chanjing", "cicada", "lip-sync", "voice-clone", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
audio = ["mutagen>=1.47.0"]
video = ["opencv-python>=4.8.0"]
all = ["mutagen>=1.47.0", "opencv-python>=4.8.0"]

[project.urls]
Homepage = "https://www.chanjing.cc/"
Documentation = "https://doc.chanjing.cc/"
Repository = "https://github.com/chanjing-ai/chanjing-python-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chanjing"]
